# client-server

./: .gitignore  CMakeLists.txt  FXTM-client-server.sln  Readme.txt  build.bat
client/: CMakeLists.txt  client.vcxproj  client.vcxproj.filters
client/source/: Client.cpp  Client.hpp  ClientImpl.cpp  ClientImpl.hpp  DataManager.cpp  DataManager.hpp  Logger.cpp  Logger.hpp  NetworkManager.cpp  NetworkManager.hpp  TransferManager.hpp  main.cpp
common/: Constants.hpp  Logger.cpp  Logger.hpp
server/: CMakeLists.txt  server.vcxproj  server.vcxproj.filters
server/source/: DataManager.cpp  DataManager.hpp  Logger.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  StoreManager.cpp  StoreManager.hpp  main.cpp
